--- a/Styles.css
+++ b/Styles.css
@@ -15,28 +15,28 @@ nav.navbar
 {
     position: sticky;
     background: linear-gradient(90deg, black, darkred);
-    width: 100%; /*take up the entire width of the window*/
-    height: 125px;
+    width: 100%;
+    height: 17.12vh;
     justify-content: space-between;
-    align-items: center; /*align on the center vertically*/
-    display: flex; /*make the content all align on the vertical*/
-    outline: none; /*remove the outline*/
+    align-items: center;
+    display: flex;
+    outline: none;
     z-index: 20;
 }
 a.navbarHeader
 {
     font-family: "Times New Roman", serif;
-    font-size: 50px;
-    color: red; /*color of the text*/
-    margin-left: 25px;
-    margin-right: 25px;
-    text-decoration-line: none; /*remove the underline on the text*/
+    font-size: 3.125rem;
+    color: red;
+    margin-left: 1.63vw;
+    margin-right: 1.63vw;
+    text-decoration-line: none;
     display: flex;
 }
 #ChannelLogo
 {
-    width: 110px;
-    height: 110px;
+    width: 7.16vw;
+    height: 15.07vh;
     border-radius: 60%;
     filter: brightness(300%);
 }
@@ -48,8 +48,8 @@ a.navbarHeader
 }
 #ChannelName
 {
-    margin-left: 35px;
-    padding-top: 35px;
+    margin-left: 2.28vw;
+    padding-top: 4.79vh;
 }
 #ChannelName:hover
 {
@@ -59,26 +59,26 @@ a.navbarHeader
 button.navbarButton
 {
     font-family: "Times New Roman", serif;
-    font-size: 25px;
-    background-color: darkgray; /*color of the background of the button*/
-    color: red; /*color of the text of the button*/
-    margin-left: 5px; /*space between buttons*/
-    margin-bottom: -10px; /*center the text on the vertical axis within the button*/
-    padding-top: 10px; /*slightly move the button down to make even with the navbar header text*/
-    padding-bottom: 10px;
-    padding-right: 8px;
-    padding-left: 8px;
+    font-size: 1.56rem;
+    background-color: darkgray;
+    color: red;
+    margin-left: 0.33vw;
+    margin-bottom: -1.37vh;
+    padding-top: 1.37vh;
+    padding-bottom: 1.37vh;
+    padding-right: 0.52vw;
+    padding-left: 0.52vw;
 }
 button.navbarButton:hover
 {
-    background-color: grey; /*color the background of the button transitions to*/
-    color: #590000; /*color the text of the button transitions to*/
-    transition-duration: 0.2s; /*length it takes for the hover transition to take over*/
+    background-color: grey;
+    color: #590000;
+    transition-duration: 0.2s;
 }
 .navbarButtons
 {
-    gap: 25px;
-    margin-right: 25px;
+    gap: 1.63vw;
+    margin-right: 1.63vw;
 }
 .dropdown
 {
@@ -91,7 +91,7 @@ button.navbarButton:hover
     display: none;
     position: absolute;
     background-color: grey;
-    min-width: 180px;
+    min-width: 11.72vw;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 30;
     flex-direction: column;
@@ -101,53 +101,39 @@ button.navbarButton:hover
     display: none;
     position: absolute;
     background-color: grey;
-    min-width: 220px;
+    min-width: 14.32vw;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 30;
     flex-direction: column;
 }
-.dropdown-content_1 a
-{
-    color: red;
-    padding: 10px 12px;
-    text-decoration: none;
-    display: block;
-}
-.dropdown-content_1 a:hover
-{
-    background-color: #590000;
-    transition-duration: 0.3s;
-    transform: scaleY(1.3);
-}
-.dropdown:hover .dropdown-content_1
-{
-    display: block;
-}
+.dropdown-content_1 a,
 .dropdown-content_2 a
 {
     color: red;
-    padding: 10px 12px;
+    padding: 1.37vh 1.56vw;
     text-decoration: none;
     display: block;
 }
+.dropdown-content_1 a:hover,
 .dropdown-content_2 a:hover
 {
     background-color: #590000;
     transition-duration: 0.3s;
     transform: scaleY(1.3);
 }
+.dropdown:hover .dropdown-content_1,
 .dropdown:hover .dropdown-content_2
 {
     display: block;
 }
 
-/*styling for the footer (same footer for every page)*/
+/*styling for the footer*/
 footer.footer
 {
     position: static;
     background: linear-gradient(90deg, darkred, black);
     width: 100%;
-    height: 125px;
+    height: 17.12vh;
     align-items: center;
     display: flex;
     outline: none;
@@ -155,15 +141,11 @@ footer.footer
 }
 a.footerHomeLink
 {
-    margin-left: 50px;
+    margin-left: 3.25vw;
     text-decoration-line: none;
     color: white;
 }
-a.footerHomeLink:link
-{
-    text-decoration-line: none;
-    color: white;
-}
+a.footerHomeLink:link,
 a.footerHomeLink:visited
 {
     text-decoration-line: none;
@@ -171,18 +153,18 @@ a.footerHomeLink:visited
 }
 img.footerImage
 {
-    width: 75px;
-    height: 75px;
-    margin-left: 50px;
+    width: 4.88vw;
+    height: 10.27vh;
+    margin-left: 3.25vw;
     text-decoration-line: none;
 }
 #footerCopyright
 {
     color: white;
-    margin-left: 50px;
+    margin-left: 3.25vw;
 }
 
-/*styling for the home page about sections*/
+/*home page styling*/
 main.HomeMain
 {
     display: flex;
@@ -195,7 +177,6 @@ main.HomeMain
     color: black;
     transition: background 1s ease, color 0.3s ease;
 }
-
 main.HomeMain h1,
 main.HomeMain h2,
 main.HomeMain h3,
@@ -250,7 +231,7 @@ h1.HomeMainHeader
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 25px;
+    margin-top: 1.63vw;
     background: whitesmoke;
     color: black;
     transition: background 1s ease, color 0.3s ease;
@@ -264,7 +245,7 @@ h2.HomeMainHeader
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 1.875rem;
 }
 p.HomeMainParagraph
 {
@@ -272,14 +253,14 @@ p.HomeMainParagraph
     color: black;
     transition: background 1s ease, color 0.3s ease;
     font-family: "Times New Roman", serif;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: normal;
     text-align: center;
     white-space: pre-wrap;
     word-wrap: break-word;
     overflow-wrap: break-word;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 6.51vw;
+    margin-right: 6.51vw;
 }
 h3.homeVideoHeader
 {
@@ -290,9 +271,9 @@ h3.homeVideoHeader
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
-h1.HomeMainHeader,h2.HomeMainHeader,p.HomeMainParagraph,h3.homeVideoHeader
+h1.HomeMainHeader, h2.HomeMainHeader, p.HomeMainParagraph, h3.homeVideoHeader
 {
     transition-duration: 0.5s;
     opacity: 0;
@@ -300,12 +281,14 @@ h1.HomeMainHeader,h2.HomeMainHeader,p.HomeMainParagraph,h3.homeVideoHeader
 }
 @keyframes fadeIn
 {
-    to
-    {
+    to {
         opacity: 1;
     }
 }
-h1.HomeMainHeader:hover,h2.HomeMainHeader:hover,p.HomeMainParagraph:hover,h3.homeVideoHeader:hover
+h1.HomeMainHeader:hover,
+h2.HomeMainHeader:hover,
+p.HomeMainParagraph:hover,
+h3.homeVideoHeader:hover
 {
     color: #FF0000;
 }
@@ -313,10 +296,10 @@ h1.HomeMainHeader:hover,h2.HomeMainHeader:hover,p.HomeMainParagraph:hover,h3.hom
 {
     background: lightgray;
     border-radius: 75%;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-left: 1.95vw;
+    padding-right: 1.95vw;
+    padding-top: 1.37vh;
+    padding-bottom: 1.37vh;
 }
 #randomVideo:hover
 {
@@ -326,12 +309,12 @@ h1.HomeMainHeader:hover,h2.HomeMainHeader:hover,p.HomeMainParagraph:hover,h3.hom
 }
 #homeVideo
 {
-    width: 400px;
-    height: 400px;
+    width: 26.04vw;
+    height: 54.79vh;
     align-content: center;
     justify-self: center;
-    margin-top: 10px;
-    margin-bottom: 25px;
+    margin-top: 1.37vh;
+    margin-bottom: 3.42vh;
 }
 #homeVideo:hover
 {
@@ -339,48 +322,39 @@ h1.HomeMainHeader:hover,h2.HomeMainHeader:hover,p.HomeMainParagraph:hover,h3.hom
     transform: scale(1.1);
 }
 
-/*styling for the programming projects pages*/
-main.ProjectSection
-{
-    background: repeating-linear-gradient(180deg, lightslategray 0rem, ghostwhite 25rem, silver 50rem, lightslategray 75rem);
+/*programming projects and gaming videos*/
+main.ProjectSection {
+    background: repeating-linear-gradient(180deg, lightslategray 0rem, ghostwhite 15.625rem, silver 31.25rem, lightslategray 46.875rem);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-p.ProjectHeaderParagraph
-{
-    font-family: "Times New Roman", serif;
-    font-size: 20px;
-    font-weight: normal;
-    text-align: center;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    margin-left: 100px;
-    margin-right: 100px;
-}
+p.ProjectHeaderParagraph,
 p.ProjectDescription
 {
     font-family: "Times New Roman", serif;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: normal;
     text-align: center;
     white-space: pre-wrap;
     word-wrap: break-word;
     overflow-wrap: break-word;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-bottom: 25px;
+    margin-left: 6.51vw;
+    margin-right: 6.51vw;
+}
+p.ProjectDescription
+{
+    margin-bottom: 3.42vh;
 }
 iframe.ProjectVideo
 {
-    width: 400px;
-    height: 400px;
+    width: 26.04vw;
+    height: 54.79vh;
     align-content: center;
     justify-self: center;
-    margin-top: 10px;
-    margin-bottom: 25px;
+    margin-top: 1.37vh;
+    margin-bottom: 3.42vh;
 }
 iframe.ProjectVideo:hover
 {
@@ -393,12 +367,12 @@ a.InWebsiteLink
 }
 button.DownloadExeZip
 {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: bold;
     color: black;
     background-color: lightgray;
     border-color: black;
-    border-width: 5px;
+    border-width: 0.31rem;
     transition: 0.2s;
 }
 button.DownloadExeZip:hover
