--- a/Styles.css
+++ b/Styles.css
@@ -347,6 +347,12 @@ p.ProjectDescription
 {
     margin-bottom: 3.42vh;
 }
+h2.ProjectName
+{
+    margin-left: 10vw;
+    margin-right: 10vw;
+    text-align: center;
+}
 iframe.ProjectVideo
 {
     width: 26.04vw;
@@ -355,30 +361,6 @@ iframe.ProjectVideo
     justify-self: center;
     margin-top: 1.37vh;
     margin-bottom: 3.42vh;
-}
-@Media (orientation: portrait)
-{
-    iframe.ProjectVideo
-    {
-        width: 54.79vw;
-        height: 26.04vh;
-        align-content: center;
-        justify-self: center;
-        margin-top: 1.37vh;
-        margin-bottom: 3.42vh;
-    }
-}
-@Media (max-width: 1000px) and (max-height: 700px)
-{
-    iframe.ProjectVideo
-    {
-        width: 26.04vw;
-        height: 26.04vh;
-        align-content: center;
-        justify-self: center;
-        margin-top: 1.37vh;
-        margin-bottom: 3.42vh;
-    }
 }
 iframe.ProjectVideo:hover
 {
@@ -402,4 +384,571 @@ button.DownloadExeZip
 button.DownloadExeZip:hover
 {
     background-color: grey;
+}
+
+/*portrait screen overrides*/
+@Media (orientation: portrait)
+{
+    /*navbar overrides*/
+    nav.navbar
+    {
+        position: sticky;
+        background: linear-gradient(90deg, black, darkred);
+        width: 100%;
+        height: 12vh;
+        justify-content: space-around;
+        align-items: center;
+        display: flex;
+        outline: none;
+        z-index: 20;
+    }
+    a.navbarHeader
+    {
+        font-family: "Times New Roman", serif;
+        font-size: 3.75vw;
+        color: red;
+        margin-left: 1vw;
+        margin-right: 0.5vw;
+        text-decoration-line: none;
+        display: flex;
+    }
+    #ChannelLogo
+    {
+        width: 15vw;
+        height: 7vh;
+        border-radius: 60%;
+        filter: brightness(300%);
+    }
+    #ChannelLogo:hover
+    {
+        transform: scale(1.0);
+        filter: brightness(500%);
+        transition: 1s;
+    }
+    #ChannelName
+    {
+        margin-left: 2vw;
+        padding-top: 3vh;
+    }
+    #ChannelName:hover
+    {
+        transform: scale(1.0);
+        transition: 1s;
+    }
+    button.navbarButton
+    {
+        font-family: "Times New Roman", serif;
+        font-size: 3vw;
+        background-color: darkgray;
+        color: red;
+        margin-left: 0.33vw;
+        margin-bottom: -1.37vh;
+        padding-top: 1.37vh;
+        padding-bottom: 1.37vh;
+        padding-right: 0.52vw;
+        padding-left: 0.52vw;
+    }
+    button.navbarButton:hover
+    {
+        background-color: grey;
+        color: #590000;
+        transition-duration: 0.2s;
+    }
+    .navbarButtons
+    {
+        gap: 1.63vw;
+        margin-right: 1.63vw;
+    }
+    .dropdown
+    {
+        position: relative;
+        justify-self: right;
+        display: inline-block;
+    }
+    .dropdown-content_1
+    {
+        display: none;
+        position: absolute;
+        background-color: grey;
+        min-width: 11.72vw;
+        box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+        z-index: 30;
+        flex-direction: column;
+    }
+    .dropdown-content_2
+    {
+        display: none;
+        position: absolute;
+        background-color: grey;
+        min-width: 14.32vw;
+        box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+        z-index: 30;
+        flex-direction: column;
+    }
+    .dropdown-content_1 a,
+    .dropdown-content_2 a
+    {
+        color: red;
+        padding: 1.37vh 1.56vw;
+        text-decoration: none;
+        display: block;
+    }
+    .dropdown-content_1 a:hover,
+    .dropdown-content_2 a:hover
+    {
+        background-color: #590000;
+        transition-duration: 0.3s;
+        transform: scaleY(1.3);
+    }
+    .dropdown:hover .dropdown-content_1,
+    .dropdown:hover .dropdown-content_2
+    {
+        display: block;
+    }
+
+    /*general page overrides*/
+    h2.ProjectName
+    {
+        font-size: 5vw;
+        text-align: center;
+    }
+    p.ProjectHeaderParagraph,
+    p.ProjectDescription
+    {
+        font-family: "Times New Roman", serif;
+        font-size: 2vw;
+        font-weight: normal;
+        text-align: center;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        margin-left: 3vw;
+        margin-right: 3vw;
+    }
+    iframe.ProjectVideo
+    {
+        width: 55vw;
+        height: 28vh;
+        align-content: center;
+        justify-self: center;
+        margin-top: 1vh;
+        margin-bottom: 2vh;
+    }
+
+    /*footer overrides*/
+    footer.footer
+    {
+        position: static;
+        background: linear-gradient(90deg, darkred, black);
+        width: 100%;
+        height: 12vh;
+        align-items: center;
+        display: flex;
+        outline: none;
+        justify-items: center;
+    }
+    a.footerHomeLink
+    {
+        margin-left: 2vw;
+        text-decoration-line: none;
+        color: white;
+        font-size: 2vw;
+    }
+    a.footerHomeLink:link,
+    a.footerHomeLink:visited
+    {
+        text-decoration-line: none;
+        color: white;
+    }
+    img.footerImage
+    {
+        width: 8vw;
+        height: 4vh;
+        margin-left: 2vw;
+        text-decoration-line: none;
+    }
+    #footerCopyright
+    {
+        color: white;
+        margin-left: 2vw;
+        font-size: 2vw;
+    }
+}
+
+/*ipad landscape screen overrides*/
+@media (min-width: 1024px) and (max-width: 1366px) and (orientation: landscape)
+{
+    /*navbar overrides*/
+    nav.navbar
+    {
+        position: sticky;
+        background: linear-gradient(90deg, black, darkred);
+        width: 100%;
+        height: 12vh;
+        justify-content: space-around;
+        align-items: center;
+        display: flex;
+        outline: none;
+        z-index: 20;
+    }
+    a.navbarHeader
+    {
+        font-family: "Times New Roman", serif;
+        font-size: 3.75vw;
+        color: red;
+        margin-left: 1vw;
+        margin-right: 0.5vw;
+        text-decoration-line: none;
+        display: flex;
+    }
+    #ChannelLogo
+    {
+        width: 8vw;
+        height: 8vh;
+        border-radius: 60%;
+        filter: brightness(300%);
+    }
+    #ChannelLogo:hover
+    {
+        transform: scale(1.0);
+        filter: brightness(500%);
+        transition: 1s;
+    }
+    #ChannelName
+    {
+        margin-left: 2vw;
+        padding-top: 1vh;
+    }
+    #ChannelName:hover
+    {
+        transform: scale(1.0);
+        transition: 1s;
+    }
+    button.navbarButton
+    {
+        font-family: "Times New Roman", serif;
+        font-size: 3vw;
+        background-color: darkgray;
+        color: red;
+        margin-left: 0.33vw;
+        margin-bottom: -1.37vh;
+        padding-top: 1.37vh;
+        padding-bottom: 1.37vh;
+        padding-right: 0.52vw;
+        padding-left: 0.52vw;
+    }
+    button.navbarButton:hover
+    {
+        background-color: grey;
+        color: #590000;
+        transition-duration: 0.2s;
+    }
+    .navbarButtons
+    {
+        gap: 1.63vw;
+        margin-right: 1.63vw;
+    }
+    .dropdown
+    {
+        position: relative;
+        justify-self: right;
+        display: inline-block;
+    }
+    .dropdown-content_1
+    {
+        display: none;
+        position: absolute;
+        background-color: grey;
+        min-width: 11.72vw;
+        box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+        z-index: 30;
+        flex-direction: column;
+    }
+    .dropdown-content_2
+    {
+        display: none;
+        position: absolute;
+        background-color: grey;
+        min-width: 14.32vw;
+        box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+        z-index: 30;
+        flex-direction: column;
+    }
+    .dropdown-content_1 a,
+    .dropdown-content_2 a
+    {
+        color: red;
+        padding: 1.37vh 1.56vw;
+        text-decoration: none;
+        display: block;
+    }
+    .dropdown-content_1 a:hover,
+    .dropdown-content_2 a:hover
+    {
+        background-color: #590000;
+        transition-duration: 0.3s;
+        transform: scaleY(1.3);
+    }
+    .dropdown:hover .dropdown-content_1,
+    .dropdown:hover .dropdown-content_2
+    {
+        display: block;
+    }
+
+    /*general page overrides*/
+    h2.ProjectName
+    {
+        font-size: 5vw;
+        text-align: center;
+    }
+    p.ProjectHeaderParagraph,
+    p.ProjectDescription
+    {
+        font-family: "Times New Roman", serif;
+        font-size: 2vw;
+        font-weight: normal;
+        text-align: center;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        margin-left: 3vw;
+        margin-right: 3vw;
+    }
+    iframe.ProjectVideo
+    {
+        width: 28vw;
+        height: 28vh;
+        align-content: center;
+        justify-self: center;
+        margin-top: 1vh;
+        margin-bottom: 2vh;
+    }
+
+    /*footer overrides*/
+    footer.footer
+    {
+        position: static;
+        background: linear-gradient(90deg, darkred, black);
+        width: 100%;
+        height: 12vh;
+        align-items: center;
+        display: flex;
+        outline: none;
+        justify-items: center;
+    }
+    a.footerHomeLink
+    {
+        margin-left: 2vw;
+        text-decoration-line: none;
+        color: white;
+        font-size: 2vw;
+    }
+    a.footerHomeLink:link,
+    a.footerHomeLink:visited
+    {
+        text-decoration-line: none;
+        color: white;
+    }
+    img.footerImage
+    {
+        width: 6vw;
+        height: 6vw;
+        margin-left: 2vw;
+        text-decoration-line: none;
+    }
+    #footerCopyright
+    {
+        color: white;
+        margin-left: 2vw;
+        font-size: 2vw;
+    }
+}
+
+/*smaller than ipad landscape screen overrides (1px smaller than ipad mini on both dimensions)*/
+@media (max-width: 1023px) and (orientation: landscape)
+{
+    /*navbar overrides*/
+    nav.navbar
+    {
+        position: sticky;
+        background: linear-gradient(90deg, black, darkred);
+        width: 100%;
+        height: 18vh;
+        justify-content: space-around;
+        align-items: center;
+        display: flex;
+        outline: none;
+        z-index: 20;
+    }
+    a.navbarHeader
+    {
+        font-family: "Times New Roman", serif;
+        font-size: 3vw;
+        color: red;
+        margin-left: 1vw;
+        margin-right: 0.5vw;
+        text-decoration-line: none;
+        display: flex;
+    }
+    #ChannelLogo
+    {
+        width: 8vw;
+        height: 8vh;
+        border-radius: 60%;
+        filter: brightness(300%);
+    }
+    #ChannelLogo:hover
+    {
+        transform: scale(1.0);
+        filter: brightness(500%);
+        transition: 1s;
+    }
+    #ChannelName
+    {
+        margin-left: 2vw;
+        padding-top: 0.75vh;
+    }
+    #ChannelName:hover
+    {
+        transform: scale(1.0);
+        transition: 1s;
+    }
+    button.navbarButton
+    {
+        font-family: "Times New Roman", serif;
+        font-size: 3vw;
+        background-color: darkgray;
+        color: red;
+        margin-left: 0.33vw;
+        margin-bottom: -1.37vh;
+        padding-top: 1.37vh;
+        padding-bottom: 1.37vh;
+        padding-right: 0.52vw;
+        padding-left: 0.52vw;
+    }
+    button.navbarButton:hover
+    {
+        background-color: grey;
+        color: #590000;
+        transition-duration: 0.2s;
+    }
+    .navbarButtons
+    {
+        gap: 1.63vw;
+        margin-right: 1.63vw;
+    }
+    .dropdown
+    {
+        position: relative;
+        justify-self: right;
+        display: inline-block;
+    }
+    .dropdown-content_1
+    {
+        display: none;
+        position: absolute;
+        background-color: grey;
+        min-width: 8vw;
+        box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+        z-index: 30;
+        flex-direction: column;
+    }
+    .dropdown-content_2
+    {
+        display: none;
+        position: absolute;
+        background-color: grey;
+        min-width: 10vw;
+        box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+        z-index: 30;
+        flex-direction: column;
+    }
+    .dropdown-content_1 a,
+    .dropdown-content_2 a
+    {
+        color: red;
+        padding: 1.37vh 1.56vw;
+        text-decoration: none;
+        display: block;
+    }
+    .dropdown-content_1 a:hover,
+    .dropdown-content_2 a:hover
+    {
+        background-color: #590000;
+        transition-duration: 0.3s;
+        transform: scaleY(1.3);
+    }
+    .dropdown:hover .dropdown-content_1,
+    .dropdown:hover .dropdown-content_2
+    {
+        display: block;
+    }
+
+    /*general page overrides*/
+    h2.ProjectName
+    {
+        font-size: 3vw;
+        text-align: center;
+    }
+    p.ProjectHeaderParagraph,
+    p.ProjectDescription
+    {
+        font-family: "Times New Roman", serif;
+        font-size: 2vw;
+        font-weight: normal;
+        text-align: center;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        margin-left: 3vw;
+        margin-right: 3vw;
+    }
+    iframe.ProjectVideo
+    {
+        width: 28vw;
+        height: 42vh;
+        align-content: center;
+        justify-self: center;
+        margin-top: 1vh;
+        margin-bottom: 2vh;
+    }
+
+    /*footer overrides*/
+    footer.footer
+    {
+        position: static;
+        background: linear-gradient(90deg, darkred, black);
+        width: 100%;
+        height: 18vh;
+        align-items: center;
+        display: flex;
+        outline: none;
+        justify-items: center;
+    }
+    a.footerHomeLink
+    {
+        margin-left: 2vw;
+        text-decoration-line: none;
+        color: white;
+        font-size: 2vw;
+    }
+    a.footerHomeLink:link,
+    a.footerHomeLink:visited
+    {
+        text-decoration-line: none;
+        color: white;
+    }
+    img.footerImage
+    {
+        width: 6vw;
+        height: 6vw;
+        margin-left: 2vw;
+        text-decoration-line: none;
+    }
+    #footerCopyright
+    {
+        color: white;
+        margin-left: 2vw;
+        font-size: 2vw;
+    }
 }
